# AIR-Net

./: .gitignore  Dockerfile  LICENSE  main-dog.ipynb  main.ipynb  main.py  requirements.txt  setup.cfg  train_2d_vector_field.py  train_amir_vector_field.py  train_barbara.py
MinPy/: demo.py  loss.py  net.py  reg.py
MinPy/toolbox/: dataloader.py  plot.py  pprint.py
amir/: RCMatrix_MyDMF.csv  RCMatrix_MyDMF_AIR.csv  point_cloud_grid_fit.jl  point_cloud_grid_fit.py  vector_field.py
amir/ISC_reconstructions/: 0.3DropMask_vs.csv  0.3DropRecovered_us.csv  0.3DropRecovered_vs.csv  0.5DropMask_vs.csv  0.5DropRecovered_us.csv  0.5DropRecovered_vs.csv  0.7DropMask_vs.csv  0.7DropRecovered_us.csv  0.7DropRecovered_vs.csv  0.9DropMask_vs.csv  0.9DropRecovered_us.csv  0.9DropRecovered_vs.csv  quiver.py
dmf-vector-fields/: data.py  model.py  plots.py  settings.py  train.py  train_aneu_vector_field.py
dmf_vector_fields/: data.py  enums.py  model.py  plots.py  settings.py  train.py
dmf_vector_fields/data/aneurysm/: vel_by_time_axis0.csv  vel_by_time_axis1.csv
dmf_vector_fields/data/arora2019/: rank10.pt  rank10maskrate0.675.pt  rank5.pt  rank5maskrate0.8.pt
