[metadata]
name = dmf_vector_fields
description =
author = reepoi
license = BSD-3-Clause
license_files = [LICENSE]
platforms = unix, linux, osx, cygwin, win32
classifiers = 
    Development Status :: 4 - Beta
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering

[options]
packages = dmf_vector_fields
install_requires =
    numpy
    torch
    matplotlib
    pandas

[options.extras_require]
testing =
    pytest
